# trace-pilot-tutorial

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/module/: child.cpp  child.h  parent.cpp  parent.h
